[gd_scene load_steps=10 format=2]

[ext_resource path="res://Font/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/LoadgameMenu.gd" type="Script" id=2]
[ext_resource path="res://save/GameSaver.tscn" type="PackedScene" id=3]
[ext_resource path="res://Font/pixellegacy.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/hoveroption.png" type="Texture" id=5]
[ext_resource path="res://UI/option.png" type="Texture" id=6]
[ext_resource path="res://UI/pressedoption.png" type="Texture" id=7]
[ext_resource path="res://UI/inventory.png" type="Texture" id=8]
[ext_resource path="res://UI/savebox.png" type="Texture" id=9]

[node name="LoadgameMenu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.6949
margin_top = -49.8223
margin_right = 88.305
margin_bottom = 45.178
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = -40.1554
margin_top = -20.1787
margin_right = 199.845
margin_bottom = 111.822
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 12.6307
margin_top = 18.9489
margin_right = 60.6307
margin_bottom = 30.9489
custom_fonts/font = ExtResource( 1 )
text = "LOAD GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_left = 9.63068
margin_top = 35.2499
margin_right = 61.6307
margin_bottom = 69.2499
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column 1" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 52.0
margin_bottom = 15.0

[node name="Save slot 1" type="TextureButton" parent="HBoxContainer/Column 1"]
margin_right = 24.0
margin_bottom = 15.0
rect_clip_content = true
size_flags_horizontal = 0
texture_normal = ExtResource( 9 )

[node name="Label" type="Label" parent="HBoxContainer/Column 1/Save slot 1"]
margin_left = 2.47157
margin_top = 1.26134
margin_right = 21.4716
margin_bottom = 12.2613
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.576471, 0.388235, 0.262745, 1 )
text = "Save 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save slot 2" type="TextureButton" parent="HBoxContainer/Column 1"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 15.0
rect_clip_content = true
size_flags_horizontal = 0
texture_normal = ExtResource( 9 )

[node name="Label" type="Label" parent="HBoxContainer/Column 1/Save slot 2"]
margin_left = 2.89201
margin_top = 1.47157
margin_right = 21.892
margin_bottom = 12.4716
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.576471, 0.388235, 0.262745, 1 )
text = "Save 2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column 2" type="HBoxContainer" parent="HBoxContainer"]
margin_top = 19.0
margin_right = 52.0
margin_bottom = 34.0

[node name="Save slot 3" type="TextureButton" parent="HBoxContainer/Column 2"]
margin_right = 24.0
margin_bottom = 15.0
rect_clip_content = true
size_flags_horizontal = 0
texture_normal = ExtResource( 9 )

[node name="Label" type="Label" parent="HBoxContainer/Column 2/Save slot 3"]
margin_left = 2.89201
margin_top = 2.31247
margin_right = 20.892
margin_bottom = 15.3125
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.576471, 0.388235, 0.262745, 1 )
text = "Save 3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save slot 4" type="TextureButton" parent="HBoxContainer/Column 2"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 15.0
rect_clip_content = true
size_flags_horizontal = 0
texture_normal = ExtResource( 9 )

[node name="Label" type="Label" parent="HBoxContainer/Column 2/Save slot 4"]
margin_left = 2.47157
margin_top = 1.89202
margin_right = 21.4716
margin_bottom = 12.892
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.576471, 0.388235, 0.262745, 1 )
text = "Save 4"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="."]
margin_left = 39.1342
margin_top = 83.9822
margin_right = 94.1342
margin_bottom = 92.9822
rect_min_size = Vector2( 40, 5 )
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Back"]
anchor_left = -0.140085
anchor_top = 0.0119848
anchor_right = 0.205369
anchor_bottom = 0.678659
margin_left = -4.74454
margin_top = -1.01863
margin_right = 56.2555
margin_bottom = 12.9813
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.576471, 0.388235, 0.262745, 1 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GameSaver" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="HBoxContainer/Column 1/Save slot 1" to="." method="_on_Save_slot_1_pressed"]
[connection signal="pressed" from="HBoxContainer/Column 1/Save slot 2" to="." method="_on_Save_slot_2_pressed"]
[connection signal="pressed" from="HBoxContainer/Column 2/Save slot 3" to="." method="_on_Save_slot_3_pressed"]
[connection signal="pressed" from="HBoxContainer/Column 2/Save slot 4" to="." method="_on_Save_slot_4_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
